--- a/less/style.less
+++ b/less/style.less
@@ -321,3 +321,28 @@ hr {
         margin-bottom: 0;
     }
 }
+
+.app-multi {
+    .adWhite-logo {
+        margin-bottom: 2em; 
+    }
+}
+
+.app-multi-options {
+    width: 35em;
+    margin: 0 auto;
+    padding: 1em;
+    border-radius: 4px;
+    text-align: left;
+   
+    .control {
+        margin-bottom: 0.618em;
+        display: block;
+    }
+
+    strong {
+        margin-top: 1em;
+        margin-bottom: 1em; 
+        display: table;
+    }
+}
