last section added, form validation added

--- a/css/style.css
+++ b/css/style.css
@@ -862,6 +862,14 @@ hr {
   color: #555;
   text-decoration: none;
 }
+.relativize {
+  position: relative !important;
+  margin: 0 auto;
+  -webkit-transform: none !important;
+  transform: none !important;
+  top: 0 !important;
+  left: 0 !important;
+}
 #app {
   position: absolute;
   top: 50%;
@@ -998,6 +1006,10 @@ hr {
 }
 .app-form-send-quote input[type="submit"] {
   margin-bottom: 0;
+}
+.app-form-send-quote .error {
+  font-size: 0.618em;
+  font-style: italic;
 }
 .app-multi .adWhite-logo {
   margin-bottom: 2em;
