--- a/less/style.less
+++ b/less/style.less
@@ -148,6 +148,14 @@ hr {
     }
 }
 
+.relativize {
+    position: relative !important;
+    margin: 0 auto;
+    transform: none !important;
+    top: 0 !important;
+    left: 0 !important;
+}
+
 #app {
     .centerer;
     width: 65em;
@@ -319,6 +327,11 @@ hr {
 
     input[type="submit"] {
         margin-bottom: 0;
+    }
+
+    .error {
+        font-size: 0.618em;
+        font-style: italic;
     }
 }
 
